# lattice

./: .gitignore  .gitmodules  AGENTS.md  M365_INTEGRATION_DESIGN.md  README.md  bundle.md
.amplifier/: settings.yaml
agents/: .gitignore  .webhook_state.json  agent_definitions.py  agent_runner.py  capabilities.py  catchup_messages.py  routing_webhook.py  session_webhook.py  start_webhook.sh  webhook_server.py
agents/definitions/: bud.md  lite.md  marlene.md  miller.md  otto.md  plettschner.md
agents/integrations/: __init__.py  documents.py  sharepoint.py  test_sharepoint.py
agents/personas/: bud.md  lite.md  marlene.md  miller.md  otto.md  plettschner.md
ai_working/: AGENT_PROTOCOL.md  M365_SETUP_STATUS.md  m365_credentials.env.template  repo_man_crew.env.template
amplifier-bundle-m365/: bundle.md  m365_agent.py
amplifier-bundle-m365/context/: m365-instructions.md
amplifier-module-tool-m365-auth/: README.md  pyproject.toml
amplifier-module-tool-m365-auth/amplifier_module_tool_m365_auth/: __init__.py  auth.py  cache.py  config.py  errors.py  tool.py
amplifier-module-tool-m365-auth/tests/: __init__.py
amplifier-module-tool-m365-graph/: README.md  pyproject.toml
amplifier-module-tool-m365-graph/amplifier_module_tool_m365_graph/: __init__.py  client.py  config.py  errors.py  tool.py
amplifier-module-tool-m365-graph/tests/: __init__.py
documents/: The_Repo_Code.docx  The_Repo_Code.docx.bak
m365-test/: bundle.md
