[project]
name = "amplifier-module-tool-m365-graph"
version = "0.1.0"
description = "Microsoft Graph API tool for Amplifier agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "amplifier-core>=0.1.0",
    "httpx>=0.25.0",
]

[project.entry-points."amplifier.modules"]
tool-m365-graph = "amplifier_module_tool_m365_graph:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_m365_graph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
